@@ -33,7 +33,14 @@ namespace Opus
             {
                 string platformFilter = Core.Platform.ToString(id.PlatformFilter, '|');
 
-                Core.Log.MessageAll("{0}{1} (filter: {2}) (root: '{3}')", new string('\t', depth), id.ToString("-"), platformFilter, id.Root);
+                if (id.IsDefaultVersion)
+                {
+                    Core.Log.MessageAll("{0}{1}* (filter: {2}) (root: '{3}')", new string('\t', depth), id.ToString("-"), platformFilter, id.Root);
+                }
+                else
+                {
+                    Core.Log.MessageAll("{0}{1} (filter: {2}) (root: '{3}')", new string('\t', depth), id.ToString("-"), platformFilter, id.Root);
+                }
 
                 if ((null != id.Definition) && (id.Definition.PackageIdentifiers.Count > 0))
                 {
@@ -84,7 +91,7 @@ namespace Opus
 
             if (definitionFile.PackageIdentifiers.Count > 0)
             {
-                Core.Log.MessageAll("\nDependent packages:", mainPackageId.ToString());
+                Core.Log.MessageAll("\nDependent packages (* = default version):", mainPackageId.ToString());
                 this.DisplayDependencies(definitionFile, 1);
             }
             else
